--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
     tools:context=".MainActivity">
 
     <ImageView
@@ -37,8 +36,8 @@
         app:emojiconSize="28sp"
         />
 
+
     <ListView
-        android:scrollbarThumbVertical="@android:color/transparent"
         android:id="@+id/list_of_message"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -50,7 +49,8 @@
         android:layout_height="match_parent"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll"
-        android:layout_alignParentLeft="true">
+        android:layout_alignParentLeft="true"></ListView>
 
-    </ListView>
+
+
 </RelativeLayout>
