--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,9 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <RelativeLayout
+        android:paddingTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
+        android:paddingLeft="5dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/message_user"
@@ -14,6 +20,7 @@
         android:layout_alignParentLeft="true" />
 
     <TextView
+        android:paddingRight="5dp"
         android:layout_alignParentBottom="@+id/message_user"
         android:layout_alignParentEnd="true"
         android:id="@+id/message_time"
@@ -22,11 +29,13 @@
         android:layout_alignParentRight="true" />
 
     <com.github.library.bubbleview.BubbleTextView
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
         android:layout_below="@id/message_user"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#FFF"
+        android:textColor="#000"
         android:textSize="18sp"
         android:id="@+id/message_text"
         android:layout_width="wrap_content"
@@ -37,8 +46,17 @@
         app:arrowHeight="10dp"
         app:arrowPosition="14dp"
         app:arrowLocation="left"
-        app:bubbleColor="#333639"
+        app:bubbleColor="@color/view_color"
         app:arrowCenter="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:paddingStart="5dp"
+        android:paddingLeft="5dp" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/message_text"
+            android:layout_marginTop="7dp"
+            android:background="#dedede"/>
+    </RelativeLayout>
 </RelativeLayout>
