--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="NewDialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:textColor">#000000</item>// change color
+    </style>
+
 </resources>
