--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -31,7 +31,6 @@
     <com.github.library.bubbleview.BubbleTextView
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_alignParentStart="true"
         android:layout_marginTop="5dp"
         android:layout_below="@id/message_user"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -48,15 +47,39 @@
         app:arrowLocation="left"
         app:bubbleColor="@color/view_color"
         app:arrowCenter="true"
-        android:layout_alignParentLeft="true"
         android:paddingStart="5dp"
-        android:paddingLeft="5dp" />
+        android:paddingLeft="5dp"
+        />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@+id/message_text"
-            android:layout_marginTop="7dp"
-            android:background="#dedede"/>
+        <com.github.library.bubbleview.BubbleTextView
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/message_user"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="#fff"
+            android:textSize="18sp"
+            android:id="@+id/message_text_other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            app:arrowWidth="8dp"
+            app:angle="8dp"
+            app:arrowHeight="10dp"
+            app:arrowPosition="14dp"
+            app:arrowLocation="right"
+            app:bubbleColor="@color/colorAccent"
+            app:arrowCenter="true"
+            android:paddingStart="5dp"
+            android:paddingLeft="5dp"
+            />
+
+        <!--<View-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="1dp"-->
+            <!--android:layout_below="@+id/message_text"-->
+            <!--android:layout_marginTop="7dp"-->
+            <!--android:background="#dedede"/>-->
     </RelativeLayout>
 </RelativeLayout>
